[GTK] r114021 triggered media flakyness https://bugs.webkit.org/show_bug.cgi?id=83874

Patch by Simon Pena <spena@igalia.com> on 2012-04-18
Reviewed by Philippe Normand.

Source/WebKit/gtk:

When the MediaPlaybackRequiresUserGesture setting was added, no gtk
API was implemented to access it.

This adds a property to gtk WebKit WebSettings, and connects it to
WebKit WebView, thus allowing clients to programmatically modify it.

* webkit/webkitwebsettings.cpp:
(webkit_web_settings_class_init):
(webkit_web_settings_set_property):
(webkit_web_settings_get_property):
* webkit/webkitwebsettingsprivate.h:
* webkit/webkitwebview.cpp:
(webkit_web_view_update_settings):
(webkit_web_view_settings_notify):

Tools:

Now that there is gtk API to update the
MediaPlaybackRequiresUserGesture property, set it to false from the
DumpRenderTree tool when resetting defaults to consistent values.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(resetDefaultsToConsistentValues):

LayoutTests:

media/video-load-require-user-gesture.html and
media/video-play-require-user-gesture.html where enabling
MediaPlaybackRequiresUserGesture when run, so tests running
concurrently would fail -they would pass when run independently.

Since new API is added to ensure DumpRenderTree is able to reset
that setting, having media/video-load-require-user-gesture.html and
media/video-play-require-user-gesture.html no longer causes
flakiness.

* platform/gtk/test_expectations.txt: Unskip
media/video-load-require-user-gesture.html and
media/video-play-require-user-gesture.html

Canonical link: https://commits.webkit.org/101753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114506 268f45cc-cd09-0410-ab3c-d52691b4dbfc