Source/WebKit/gtk/webkit/webkitwebsettings.cpp
@@ -121,7 +121,8 @@ enum {
     PROP_ENABLE_WEBGL,
     PROP_ENABLE_WEB_AUDIO,
     PROP_ENABLE_ACCELERATED_COMPOSITING,
-    PROP_ENABLE_SMOOTH_SCROLLING
+    PROP_ENABLE_SMOOTH_SCROLLING,
+    PROP_MEDIA_PLAYBACK_REQUIRES_USER_GESTURE
 };
 
 // Create a default user agent string
@@ -972,6 +973,24 @@ static void webkit_web_settings_class_init(WebKitWebSettingsClass* klass)
                                                          _("Whether to enable smooth scrolling"),
                                                          FALSE,
                                                          flags));
+
+    /**
+    * WebKitWebSettings:media-playback-requires-user-gesture
+    *
+    * Whether an user gesture would be required to start media playback or load
+    * media. This is off by default, so media playback could start
+    * automatically. Setting it on requires a gesture by the user to start
+    * playback, or to load the media.
+    *
+    * Since: 1.10.0
+    */
+    g_object_class_install_property(gobject_class,
+                                    PROP_MEDIA_PLAYBACK_REQUIRES_USER_GESTURE,
+                                    g_param_spec_boolean("media-playback-requires-user-gesture",
+                                                         _("Media playback requires user gesture"),
+                                                         _("Whether media playback requires user gesture"),
+                                                         FALSE,
+                                                         flags));
 }
 
 static void webkit_web_settings_init(WebKitWebSettings* web_settings)
@@ -1150,6 +1169,9 @@ static void webkit_web_settings_set_property(GObject* object, guint prop_id, con
     case PROP_ENABLE_SMOOTH_SCROLLING:
         priv->enableSmoothScrolling = g_value_get_boolean(value);
         break;
+    case PROP_MEDIA_PLAYBACK_REQUIRES_USER_GESTURE:
+        priv->mediaPlaybackRequiresUserGesture = g_value_get_boolean(value);
+        break;
     default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID(object, prop_id, pspec);
         break;
@@ -1317,6 +1339,9 @@ static void webkit_web_settings_get_property(GObject* object, guint prop_id, GVa
         break;
     case PROP_ENABLE_SMOOTH_SCROLLING:
         g_value_set_boolean(value, priv->enableSmoothScrolling);
+        break;
+    case PROP_MEDIA_PLAYBACK_REQUIRES_USER_GESTURE:
+        g_value_set_boolean(value, priv->mediaPlaybackRequiresUserGesture);
         break;
     default:
         G_OBJECT_WARN_INVALID_PROPERTY_ID(object, prop_id, pspec);
